@@ -184,6 +184,7 @@ extern "C" {
 #include <freeipmi/spec/oem/ipmi-sensor-types-oem-wistron-spec.h>
 #include <freeipmi/spec/oem/ipmi-slave-address-oem-intel-spec.h>
 #include <freeipmi/spec/oem/ipmi-slave-address-oem-inventec-spec.h>
+#include <freeipmi/spec/oem/ipmi-slave-address-oem-linux-kernel-spec.h>
 #include <freeipmi/spec/oem/ipmi-slave-address-oem-quanta-spec.h>
 #include <freeipmi/spec/oem/ipmi-slave-address-oem-wistron-spec.h>
 #include <freeipmi/spec/oem/ipmi-sol-configuration-parameters-oem-inventec-spec.h>
